# promisedyntracer

./: .gitignore  CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE
R/: promisedyntracer.R
exec/: indices.sql  schema.sql
src/: Analysis.cpp  Analysis.h  AnalysisDriver.cpp  AnalysisDriver.h  AnalysisSwitch.cpp  AnalysisSwitch.h  ArgumentPromiseState.cpp  ArgumentPromiseState.h  BinaryDataTableStream.h  BinaryTableWriter.cpp  BinaryTableWriter.h  BufferStream.h  CallState.h  Context.cpp  Context.h  DataTableStream.h  DebugSerializer.cpp  DebugSerializer.h  EnumFactory.h  FileStream.cpp  FileStream.h  FunctionAnalysis.cpp  FunctionAnalysis.h  FunctionReturnTypeAnalysis.cpp  FunctionReturnTypeAnalysis.h  FunctionState.cpp  FunctionState.h  Makevars  MetadataAnalysis.cpp  MetadataAnalysis.h  ObjectCountSizeAnalysis.cpp  ObjectCountSizeAnalysis.h  ParameterUse.h  PromiseEvaluationAnalysis.cpp  PromiseEvaluationAnalysis.h  PromiseEvaluationDistanceAnalysis.cpp  PromiseEvaluationDistanceAnalysis.h  PromiseMapper.cpp  PromiseMapper.h  PromiseSlotMutationAnalysis.cpp  (+50 more)
